policies/standard/pod_capabilities_drop/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodcapabilitiesdroppolicy
  annotations:
    description: >-
      All capabilities should be dropped and specific ones should be added
spec:
  crd:
    spec:
      names:
        kind: K8sPodCapabilitiesDropPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodcapabilitiesdroppolicy

        violation[{"msg": msg}] {
          c := input_containers[_]
          not input_capabilities_has_drop_all(c)
          msg := sprintf("All capabilities should be dropped: %v", [c.name])
        }

        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.initContainers[_]
        }

        input_capabilities_has_drop_all(c) {
          lower(c.securityContext.capabilities.drop[_]) == "all"
        }
